extract eureka as a separate module for configuration editing of eureka details from single config file for multiple services

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>starter-parent</module>
         <module>dependency-parent</module>
         <module>eureka-service</module>
+        <module>eureka-client-dependency</module>
         <module>bookmark-service</module>
         <module>contact-service</module>
         <module>passport-service</module>
