--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-
 server:
   port: ${PORT:9023}
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+#eureka:
+#  instance:
+#    instanceId: ${random.uuid}
+---
 spring:
   profiles:
-    include: security
+    include: security, eureka
 
