--- a/passport-service/pom.xml
+++ b/passport-service/pom.xml
@@ -48,5 +48,10 @@
             <artifactId>security-sso-dependency</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>eureka-client-dependency</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
