--- a/passport-service/src/main/resources/application.yml
+++ b/passport-service/src/main/resources/application.yml
@@ -1,11 +1,9 @@
-
 server:
   port: ${PORT:8084}
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+#eureka:
+#  instance:
+#    instanceId: ${random.uuid}
+---
 spring:
   profiles:
-    include: security
+    include: security, eureka
