add ssl over authentication server with self signed certificates

--- a/bookmark-service/src/main/resources/application.yml
+++ b/bookmark-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   jpa:
     generate-ddl: true
+  application:
+    name: bookmark-service
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
