--- a/passport-service/src/main/resources/application.yml
+++ b/passport-service/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: ${PORT:8084}
+spring:
+  application:
+    name: passport-service
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
