--- a/bookmark-service/pom.xml
+++ b/bookmark-service/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>bookmark-service</artifactId>
+    <packaging>pom</packaging>
     <properties>
         <main.basedir>..</main.basedir>
     </properties>
