--- a/client-service-light/src/main/resources/application.yml
+++ b/client-service-light/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: ${PORT:9024}
+spring:
+  application:
+    name: client-service-light
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
