--- a/contact-service/src/main/resources/application.yml
+++ b/contact-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   jpa:
     generate-ddl: true
+  application:
+    name: contact-service
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
