--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>eureka-service</artifactId>
+    <packaging>pom</packaging>
     <properties>
-        <main.basedir>..</main.basedir>
         <start.class>ro.rasel.service.eureka.EurekaServerApplication</start.class>
     </properties>
     <dependencies>
