--- a/hystrix-dashboard-service/pom.xml
+++ b/hystrix-dashboard-service/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>hystrix-dashboard-service</artifactId>
+    <packaging>pom</packaging>
     <properties>
-        <main.basedir>..</main.basedir>
+        <start.class>ro.rasel.service.histrix.HystrixDashboardApplication</start.class>
     </properties>
     <dependencies>
         <dependency>
