--- a/passport-service/pom.xml
+++ b/passport-service/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>passport-service</artifactId>
+    <packaging>pom</packaging>
     <properties>
-        <main.basedir>..</main.basedir>
+        <start.class>ro.rasel.service.passport.PassportServiceApplication</start.class>
     </properties>
     <dependencyManagement>
         <dependencies>
