--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>security-sso-auth-server</artifactId>
+    <packaging>pom</packaging>
     <properties>
-        <main.basedir>..</main.basedir>
+        <start.class>ro.rasel.service.</start.class>
     </properties>
     <dependencies>
         <dependency>
