--- a/security-sso-dependency/pom.xml
+++ b/security-sso-dependency/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>security-sso-dependency</artifactId>
+    <packaging>pom</packaging>
     <properties>
         <wro4j.version>1.7.6</wro4j.version>
     </properties>
@@ -39,6 +40,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
