--- a/security-sso-ui/pom.xml
+++ b/security-sso-ui/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>security-sso-ui</artifactId>
+    <packaging>pom</packaging>
     <properties>
-        <main.basedir>..</main.basedir>
+        <start.class>ro.rasel.security.client.ui</start.class>
         <wro4j.version>1.7.6</wro4j.version>
     </properties>
     <dependencies>
