--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,11 @@
         <module>starter-parent</module>
         <module>dependency-parent</module>
         <module>commons</module>
+        <module>spring-commons</module>
         <module>eureka-service</module>
         <module>eureka-client-dependency</module>
+        <module>tls-dependency</module>
+        <module>security-sso-auth-server</module>
         <module>security-sso-dependency</module>
         <module>bookmark-service</module>
         <module>contact-service</module>
@@ -20,6 +23,5 @@
         <module>client-service-light</module>
         <module>hystrix-dashboard-service</module>
         <module>security-sso-ui</module>
-        <module>security-sso-auth-server</module>
     </modules>
 </project>
