--- a/security-sso-auth-server/src/main/resources/application.properties
+++ b/security-sso-auth-server/src/main/resources/application.properties
@@ -6,9 +6,4 @@ spring.datasource.url=jdbc:hsqldb:file:./target/db/testdb
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-server.ssl.key-alias=jksalias
-server.ssl.key-store-password=jkspass
-server.ssl.key-store=classpath:my.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-type=JKS
-server.ssl.protocol=TLSv1.2
+spring.profiles.include=ssl
