--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -39,5 +39,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>tls-dependency</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
