--- a/security-sso-dependency/pom.xml
+++ b/security-sso-dependency/pom.xml
@@ -43,7 +43,12 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>spring-commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>tls-dependency</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
