refactoring to set component dependencies under the main modules

--- a/security-sso-ui/pom.xml
+++ b/security-sso-ui/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>tls-dependency</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
