--- a/client-service-light/pom.xml
+++ b/client-service-light/pom.xml
@@ -49,5 +49,10 @@
             <artifactId>security-sso-dependency</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>tls-dependency</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
