--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -54,5 +54,10 @@
             <artifactId>eureka-client-dependency</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>tls-dependency</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
