--- a/security-sso-dependency/src/main/resources/application-security.yml
+++ b/security-sso-dependency/src/main/resources/application-security.yml
@@ -19,7 +19,7 @@ security:
       userInfoUri: ${server.security.url}/uaa/user
   basic:
     enabled: false
-# histrix strategy is required to avoid errors caused by the fact that hystrix handles requests in a different thread causing unexpected errors over feign
+# hystrix strategy is required to avoid errors caused by the fact that hystrix handles requests in a different thread causing unexpected errors over feign
 hystrix:
   command:
     default:
