documentation, code cleanup and small refactoring

--- a/security-sso-dependency/src/main/resources/application-security.yml
+++ b/security-sso-dependency/src/main/resources/application-security.yml
@@ -7,6 +7,7 @@ zuul:
       path: /user/**
       url: ${server.security.url}/uaa/user
 security:
+  enabled: true
   user:
     password: password
   oauth2:
