--- a/tls-dependency/src/main/resources/application-truststore.yml
+++ b/tls-dependency/src/main/resources/application-truststore.yml
@@ -1,3 +1,9 @@
+truststore:
+  enabled: true
+eureka:
+  instance:
+    nonSecurePortEnabled: false
+    securePortEnabled: true
 system:
   property:
     server:
