--- a/security-sso-ui/pom.xml
+++ b/security-sso-ui/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>security-sso-dependency</artifactId>
+            <artifactId>security-sso-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>tls-dependency</artifactId>
+            <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
