--- a/client-service-light/pom.xml
+++ b/client-service-light/pom.xml
@@ -35,12 +35,12 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>security-sso-dependency</artifactId>
+            <artifactId>security-sso-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>tls-dependency</artifactId>
+            <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
