--- a/contact-service/pom.xml
+++ b/contact-service/pom.xml
@@ -31,17 +31,17 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>security-sso-dependency</artifactId>
+            <artifactId>security-sso-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>eureka-client-dependency</artifactId>
+            <artifactId>eureka-client-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>tls-dependency</artifactId>
+            <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
