--- a/eureka-client-component/pom.xml
+++ b/eureka-client-component/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>dependency-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>eureka-client-dependency</artifactId>
+    <artifactId>eureka-client-component</artifactId>
     <packaging>pom</packaging>
     <dependencies>
         <dependency>
