--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,17 @@
         <module>commons</module>
         <module>spring-commons</module>
         <module>eureka-service</module>
-        <module>eureka-client-dependency</module>
-        <module>tls-dependency</module>
+        <module>eureka-client-component</module>
+        <module>ssl-component</module>
         <module>security-sso-auth-server</module>
-        <module>security-sso-dependency</module>
+        <module>security-sso-component</module>
         <module>bookmark-service</module>
         <module>contact-service</module>
         <module>passport-service</module>
         <module>client-service</module>
         <module>client-service-light</module>
+        <module>spring-batch-scalability</module>
+        <module>batch-processing</module>
         <module>hystrix-dashboard-service</module>
         <module>security-sso-ui</module>
     </modules>
