--- a/ssl-component/pom.xml
+++ b/ssl-component/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>starter-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>tls-dependency</artifactId>
+    <artifactId>ssl-component</artifactId>
     <packaging>pom</packaging>
     <properties>
         <wro4j.version>1.7.6</wro4j.version>
