--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -3,13 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>dependency-parent</artifactId>
         <groupId>ro.rasel</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>commons</artifactId>
     <packaging>pom</packaging>
+
+    <description>Contains utility classes used my multiple services.</description>
+
     <dependencies>
         <dependency>
             <groupId>commons-io</groupId>
