--- a/eureka-client-component/src/main/resources/application-eureka.yml
+++ b/eureka-client-component/src/main/resources/application-eureka.yml
@@ -1,14 +1,15 @@
-# all interval properties above should be adjusted for performance
 eureka:
   client:
     serviceUrl:
       defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+    # all interval properties below may require to be adjusted for performance
     registry-fetch-interval-seconds: 10
     eureka-service-url-poll-interval-seconds: 5
     initial-instance-info-replication-interval-seconds: 15
     instance-info-replication-interval-seconds: 10
   instance:
     leaseRenewalIntervalInSeconds: 10
+    securePortEnabled: ${ssl.enabled:false}
     securePort: ${server.port}
     hostname: ${server.host:localhost}
     # protocol defined under application-ssl.yml file where the decision is made if ssl is enabled or not
