--- a/passport-service/src/main/resources/application.yml
+++ b/passport-service/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, truststore
+    include: security, eureka, ssl, sslTruststore
