--- a/security-sso-ui/pom.xml
+++ b/security-sso-ui/pom.xml
@@ -2,31 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>ro.rasel</groupId>
         <artifactId>starter-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>security-sso-ui</artifactId>
     <packaging>pom</packaging>
+
+    <description>Module for testing basic security for rest controllers.</description>
+
     <properties>
         <start.class>ro.rasel.security.client.ui</start.class>
         <wro4j.version>1.7.6</wro4j.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zuul</artifactId>
         </dependency>
         <dependency>
-            <groupId>ro.rasel</groupId>
-            <artifactId>security-sso-component</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>security-sso-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
