--- a/spring-commons/pom.xml
+++ b/spring-commons/pom.xml
@@ -10,14 +10,13 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <description>Contains beans and config files used in multiple projects. Explicit import must be done to use them but
-        they can be reused.
-    </description>
-
     <artifactId>spring-commons</artifactId>
     <packaging>pom</packaging>
 
-    <description>Module used to define reusable spring beans that can be reused in multiple services</description>
+    <description>
+        Module used to define reusable spring beans that can be reused in multiple services.
+        Explicit import must be done to use them.
+    </description>
 
     <dependencies>
         <dependency>
