enable ssl over eureka

--- a/bookmark-service/src/main/resources/application.yml
+++ b/bookmark-service/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTruststore
+    include: security, eureka, ssl, sslTrustStore
