--- a/contact-service/src/main/resources/application.yml
+++ b/contact-service/src/main/resources/application.yml
@@ -11,5 +11,5 @@ spring:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTruststore
+    include: security, eureka, ssl, sslTrustStore
 
