--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -21,5 +21,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>ssl-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
