--- a/client-service-light/src/main/resources/application.yml
+++ b/client-service-light/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTruststore
+    include: security, eureka, ssl, sslTrustStore
 
