--- a/eureka-client-component/src/main/resources/application-eureka.yml
+++ b/eureka-client-component/src/main/resources/application-eureka.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+      defaultZone: ${vcap.services.eureka-service.credentials.uri:https://localhost:8761}/eureka/
     # all interval properties below may require to be adjusted for performance
     registry-fetch-interval-seconds: 10
     eureka-service-url-poll-interval-seconds: 5
