--- a/client-service-light/pom.xml
+++ b/client-service-light/pom.xml
@@ -40,6 +40,11 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
+            <artifactId>eureka-client-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
             <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
