--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -23,6 +23,11 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
+            <artifactId>security-sso-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
             <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
