--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -2,16 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>ro.rasel</groupId>
         <artifactId>starter-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>security-sso-auth-server</artifactId>
     <packaging>pom</packaging>
+
+    <description>Security service for oauth2 authentication/authorisation</description>
+
     <properties>
         <start.class>ro.rasel.service.</start.class>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hsqldb</groupId>
