--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>domain-interfaces</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
