--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ssl-component</module>
         <module>security-sso-auth-server</module>
         <module>security-sso-component</module>
+        <module>domain-interfaces</module>
         <module>bookmark-service</module>
         <module>contact-service</module>
         <module>passport-service</module>
