pom refactoring and changes to use local repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 *.iml
 *.ipr
 *.iml
-.idea/inspectionProfiles
-.idea/libraries
-.idea/artifacts
-.idea/dictionaries
-.idea/.name
-.idea/*.xml
+.idea/*
+.repo/*
