--- a/bookmark-service/pom.xml
+++ b/bookmark-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>bookmark-service</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <start.class>ro.rasel.service.bookmarks.BookmarkServiceApplication</start.class>
