--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>client-service</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <start.class>ro.rasel.client.service.ClientServiceApplication</start.class>
