--- a/eureka-client-component/pom.xml
+++ b/eureka-client-component/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>eureka-client-component</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <description>Component used to provide dependencies, default configuration and code for connection to Eureka service.</description>
 
