--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>eureka-service</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <start.class>ro.rasel.service.eureka.EurekaServerApplication</start.class>
