--- a/hystrix-dashboard-service/pom.xml
+++ b/hystrix-dashboard-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>hystrix-dashboard-service</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <start.class>ro.rasel.service.hystrix.HystrixDashboardApplication</start.class>
