--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>ro.rasel</groupId>
     <artifactId>microservices-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <modules>
         <module>starter-parent</module>
         <module>dependency-parent</module>
@@ -25,4 +27,13 @@
         <module>hystrix-dashboard-service</module>
         <module>security-sso-ui</module>
     </modules>
+
+    <distributionManagement>
+        <!--other repositories if any-->
+        <repository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/../.repo</url>
+        </repository>
+    </distributionManagement>
 </project>
