--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>security-sso-auth-server</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <description>Security service for oauth2 authentication/authorisation</description>
 
