--- a/security-sso-ui/pom.xml
+++ b/security-sso-ui/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>security-sso-ui</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <description>Module for testing basic security for rest controllers.</description>
 
