--- a/ssl-component/pom.xml
+++ b/ssl-component/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>ro.rasel</groupId>
-        <artifactId>starter-parent</artifactId>
+        <artifactId>dependency-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
