--- a/security-sso-auth-server/pom.xml
+++ b/security-sso-auth-server/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--Security-->
+        <!--Spring Security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -49,6 +49,7 @@
             <artifactId>spring-security-jwt</artifactId>
         </dependency>
 
+        <!--HSQL-->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
