--- a/security-sso-component/pom.xml
+++ b/security-sso-component/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
 
-        <!--Security-->
+        <!--Spring Security-->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
