--- a/spring-commons/pom.xml
+++ b/spring-commons/pom.xml
@@ -19,18 +19,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
             <groupId>ro.rasel</groupId>
             <artifactId>commons</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <!--Spring Boot-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>RELEASE</version>
         </dependency>
     </dependencies>
 </project>
