--- a/ssl-component/pom.xml
+++ b/ssl-component/pom.xml
@@ -20,10 +20,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
             <groupId>ro.rasel</groupId>
             <artifactId>commons</artifactId>
             <version>1.0.0-SNAPSHOT</version>
@@ -32,6 +28,12 @@
             <groupId>ro.rasel</groupId>
             <artifactId>spring-commons</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--Spring Boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 </project>
