--- a/client-service-light/src/main/resources/application.yml
+++ b/client-service-light/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: client-service-light
+security:
+  basic:
+    enabled: false
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
