--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: eureka-service
+security:
+  basic:
+    enabled: false
 eureka:
   client:
     registerWithEureka: false
