--- a/bookmark-service/src/main/resources/application.yml
+++ b/bookmark-service/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     generate-ddl: true
   application:
     name: bookmark-service
+security:
+  basic:
+    enabled: false
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
