--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: client-service
+security:
+  basic:
+    enabled: false
+zuul:
+  routes:
+    path: /bookmark-service/*
+    serviceId: bookmark-service
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
