--- a/dependency-parent/pom.xml
+++ b/dependency-parent/pom.xml
@@ -22,6 +22,7 @@
         <spring-cloud.version>1.4.3.RELEASE</spring-cloud.version>
         <spring-cloud-security.version>1.2.2.RELEASE</spring-cloud-security.version>
         <spring-security-oauth2.version>2.2.1.RELEASE</spring-security-oauth2.version>
+        <swagger.version>2.7.0</swagger.version>
     </properties>
 
     <dependencyManagement>
@@ -85,13 +86,12 @@
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
-                <version>2.8.0</version>
-                <scope>compile</scope>
+                <version>${swagger.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
-                <version>2.8.0</version>
+                <version>${swagger.version}</version>
             </dependency>
 
             <!--Apache Commons-->
