--- a/passport-service/src/main/resources/application.yml
+++ b/passport-service/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: passport-service
+security:
+  basic:
+    enabled: false
 #eureka:
 #  instance:
 #    instanceId: ${random.uuid}
