--- a/passport-service/pom.xml
+++ b/passport-service/pom.xml
@@ -36,6 +36,11 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
+            <artifactId>swagger-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>a
+        <dependency>
+            <groupId>ro.rasel</groupId>
             <artifactId>domain-interfaces</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
