add swagger manager for proxy, do swagger refactoring

--- a/bookmark-service/src/main/resources/application.yml
+++ b/bookmark-service/src/main/resources/application.yml
@@ -14,4 +14,4 @@ security:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTrustStore
+    include: security, eureka, ssl, sslTrustStore, swagger
