--- a/client-service-light/src/main/resources/application.yml
+++ b/client-service-light/src/main/resources/application.yml
@@ -10,7 +10,9 @@ security:
 #  instance:
 #    instanceId: ${random.uuid}
 ---
+swagger:
+  proxy: true
 spring:
   profiles:
-    include: security, eureka, ssl, sslTrustStore
+    include: security, eureka, ssl, sslTrustStore, swagger
 
