--- a/contact-service/src/main/resources/application.yml
+++ b/contact-service/src/main/resources/application.yml
@@ -14,5 +14,5 @@ security:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTrustStore
+    include: security, eureka, ssl, sslTrustStore, swagger
 
