--- a/passport-service/src/main/resources/application.yml
+++ b/passport-service/src/main/resources/application.yml
@@ -12,4 +12,4 @@ security:
 ---
 spring:
   profiles:
-    include: security, eureka, ssl, sslTrustStore
+    include: security, eureka, ssl, sslTrustStore, swagger
