add spring boot maven plugin

--- a/starter-parent/pom.xml
+++ b/starter-parent/pom.xml
@@ -30,6 +30,15 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <distributionManagement>
         <repository>
             <id>project.local</id>
