--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
 
         <!--Spring Cloud-->
+        <!--Service is used to be able to render eureka UI-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zuul</artifactId>
