--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -22,6 +22,6 @@ eureka.instance.homePageUrl=${eureka.instance.url}/
 
 ribbon.IsSecure=true
 #ribbon.ConnectTimeout=999999999
-#ribbon.ReadTimeout=999999999
+ribbon.ReadTimeout=86400000
 #zuul.host.connect-timeout-millis=999999999
 #zuul.host.socket-timeout-millis=999999999
