--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -2,11 +2,13 @@ server.hostname=${COMPUTERNAME}
 server.port=8761
 spring.application.name=eureka-service
 
-security.basic.enabled=false
+security.basic.enabled=true
+security.user.name=eureka
+security.user.password=eurekasecret
 
 eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=false
 eureka.server.responseCacheAutoExpirationInSeconds=10
 
-spring.profiles.include=sslTrustStore, security, eureka, ssl
+spring.profiles.include=sslTrustStore, eureka, ssl
 
